--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 <body>
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
   <h1>Sofia Velagri</h1>
-  <p>Official page of AI model Sofia Velagri. Follow for daily AI-generated content, social links, and more.</p>
+  <p>OFFICIAL PAGE OF SOFIA VELAGRI ✅.</p>
+  <p>Follow for daily content, social links, and more.</p>
 
   <div class="links">
     <a href="https://www.instagram.com/sofiavelagri" target="_blank">Instagram</a>
