--- a/index.html
+++ b/index.html
@@ -59,14 +59,12 @@
 <body>
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
   <h1>Sofia Velagri</h1>
-  <p>OFFICIAL PAGE OF SOFIA VELAGRI ✅.</p>
-  <p>Follow for daily content, social links, and more.</p>
-
-  <div class="links">
-    <a href="https://www.instagram.com/sofiavelagri" target="_blank">Instagram</a>
-    <a href="https://www.patreon.com/sofiavelagri" target="_blank">Patreon</a>
-    <a href="https://onlyfans.com/sofiavelagri" target="_blank">OnlyFans</a>
-    <a href="mailto:contact@sofiavelagri.com">Contact</a>
+  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">OFFICIAL PAGE OF SOFIA VELAGRI ✅.</a></p>
+  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">Follow for daily content, social links, and more.</a></p>p
+  <div class="links">    
+    <a href="https://www.fanvue.com/sofiakiko" target="_blank">Fanvue</a>
+    <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">Instagram</a>    
+    <a href="forme@sofiavelagri.com">Contact</a>
   </div>
 </body>
 </html>
