--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
   <h1>Sofia Velagri</h1>
   <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">OFFICIAL PAGE OF SOFIA VELAGRI ✅.</a></p>
-  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">Follow for daily content, social links, and more.</a></p>p
+  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">Follow for daily content, social links, and more.</a></p>
   <div class="links">    
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">Instagram</a>    
