--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #111;
-      color: #fff;
+      background: #F8F8FF;
+      color: #f11;
       display: flex;
       flex-direction: column;
       align-items: center;
