--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
   <h1>Sofia Velagri</h1>
-  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">OFFICIAL PAGE OF SOFIA VELAGRI ✅.</a></p>
-  <p><a href="https://www.fanvue.com/sofiakiko" target="_blank">Follow for daily content, social links, and more.</a></p>
+  <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI ✅.</p></h1>
+  <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">Instagram</a>    
