--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #F8F8FF;
-      color: #f11;
+      color: #111;
       display: flex;
       flex-direction: column;
       align-items: center;
