--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #F8F8FF;
-      color: #9e7bb5;
+      background: #8a6d5d;
+      color: #ffffff;
       display: flex;
       flex-direction: column;
       align-items: center;
