--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-    <img src="fan.png" alt="Fanvue" width="20" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
+    <img src="Fan.png" alt="Fanvue" width="20" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">Instagram</a>    
     <a href="forme@sofiavelagri.com">Contact</a>
   </div>
