--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <div class="links">    
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
     <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
-    <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">Instagram</a>    
+    <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
+    <img src="inst.png" alt="Instagram" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Instagram</a>    
     <a href="forme@sofiavelagri.com">Contact</a>
   </div>
 </body>
