--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
+      object-fit: cover;
+      object-position: center bottom;
       border: 3px solid #fff;
       margin-bottom: 20px;
     }
