--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
   <h1>Sofia Velagri</h1>
-  <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI ✅.</p></h1>
+  <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI <img src="met.png" alt="met" width="28" height="28" style="vertical-align: middle; margin-right: 8px;"></p></h1>
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
