--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sofia Velagri  <img src="met.png" alt="met" width="28" height="28" style="vertical-align: middle; margin-right: 8px;"></title>
+  <title>Sofia Velagri</title>
   <style>
     body {
       margin: 0;
@@ -60,7 +60,7 @@
 </head>
 <body>
   <img class="profile" src="sofia.jpg" alt="Sofia Velagri" />
-  <h1>Sofia Velagri</h1>
+  <h1>Sofia Velagri  <img src="met.png" alt="met" width="28" height="28" style="vertical-align: middle; margin-right: 8px;"></h1>
   <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI.</p></h1>
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
