--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI.</p></h1>
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank  class="fancy-button">
+    <a href="https://www.fanvue.com/sofiakiko" target="_blank"  class="fancy-button">
     <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
     <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>    
