--- a/index.html
+++ b/index.html
@@ -56,27 +56,6 @@
     .links a:hover {
       background: #555;
     }
-    .fancy-button {
-  display: inline-block;
-  padding: 14px 24px;
-  border-radius: 12px;
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-  text-decoration: none;
-  position: relative;
-  overflow: hidden;
-  background-image: url("data:image/svg+xml;utf8,\
-    <svg xmlns='http://www.w3.org/2000/svg' width='200' height='30'>\
-      <text x='0' y='20' font-size='14' fill='rgba(255,255,255,0.08)'>18+ контент 18+ контент 18+ контент</text>\
-    </svg>");
-  background-repeat: repeat;
-  background-color: #2d2d2d;
-  background-size: auto 30px;
-  text-align: center;
-}
-.fancy-button:hover {
-  background-color: #1f1f1f;
 }
   </style>
 </head>
@@ -86,7 +65,7 @@
   <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI.</p></h1>
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank"  class="fancy-button">
+    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
     <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
     <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>    
