--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       text-align: center;
       max-width: 500px;
       color: #ccc;
+      opacity: 0.5;
     }
     .links {
       display: flex;
