--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <h1><p>OFFICIAL PAGE OF SOFIA VELAGRI.</p></h1>
   <p>Follow for daily content, social links, and more.</p>
   <div class="links">    
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
+    <a href="https://www.fanvue.com/sofiakiko" target="_blank" style="color: #C0C0C0; opacity: 0.5;">
     <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue  <img src="18.png" alt="Fanvue" width="32" height="32" style="vertical-align: middle; margin-left: 8px;"></a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
     <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>    
