--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <!-- Hero block is clickable -->
   <section class="hero">
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="portrait.jpg" alt="Model Portrait">
+      <img src="sofia.jpg" alt="Model Portrait">
       <div class="tagline">Discover the New Style</div>
       <div class="cta-button">View Portfolio</div>
     </a>
