--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
   <!-- Hero block is clickable -->
   <section class="hero">
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="sofia.jpg" alt="Model Portrait">
+      <img src="sofia.jpg" alt="Sofia Velagri">
       <div class="tagline">Discover the New Style</div>
-      <div class="cta-button">View Portfolio</div>
+      <div class="cta-button">Sofia Velagri <img src="met.png" alt="met" width="28" height="28" style="vertical-align: middle; margin-right: 8px;"></div>
     </a>
     <div class="warning">
       <span>18+</span> WARNING: Explicit Content
@@ -139,7 +139,7 @@
   <footer>
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">FANVI</a>
     <a href="https://instagram.com/yourmodelpage" target="_blank">Instagram</a>
-    <a href="mailto:contact@example.com">Contact</a>
+    <a href="mailto:forme@sofiavelagri.com"><img src="mesage.png" alt="Contact" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Contact</a>
   </footer>
 
 </body>
