--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 
   <footer>
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">FANVI</a>
-    <a href="https://instagram.com/yourmodelpage" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
+    <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>
     <a href="mailto:forme@sofiavelagri.com"><img src="mesage.png" alt="Contact" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Contact</a>
   </footer>
 
