--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <footer>
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-    <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue  <img src="18.png" alt="Fanvue" width="32" height="32" style="vertical-align: middle; margin-left: 8px;"></a>
+    <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
     <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>
     <a href="mailto:forme@sofiavelagri.com"><img src="mesage.png" alt="Contact" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Contact</a>
