--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
   <!-- Hero block is clickable -->
   <section class="hero">
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="sofia.jpg" alt="Sofia Velagri">
+      <img src="sofia.png" alt="Sofia Velagri">
       <div class="tagline">Discover the New Style</div>
-      <div class="cta-button">Sofia Velagri <img src="met.png" alt="met" width="28" height="28" style="vertical-align: middle; margin-right: 8px;"></div>
+      <div class="cta-button">Private Content <img src="18.png" alt="Fanvue" width="32" height="32" style="vertical-align: middle; margin-left: 8px;"></div>
     </a>
     <div class="warning">
       <span>18+</span> WARNING: Explicit Content
