--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       margin-top: 1rem;
       padding: 0.6rem 1.2rem;
       border: 2px solid #111;
-      background: none;
+      background: #7a7a7a;
       font-weight: 500;
       text-decoration: none;
       color: #111;
