--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       border: 2px solid #111;
       background: #7a7a7a;
       font-weight: 500;
-      text-decoration: none;
+      text-decoration: #ddd;
       color: #111;
       border-radius: 6px;
     }
@@ -120,7 +120,9 @@
 <body>
 
   <header>
-    <div>SOFIA VELAGRI</div>
+    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
+      <div>SOFIA VELAGRI</div>
+    </a>    
     <div class="menu-icon">☰</div>
   </header>
 
