--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       margin-top: 1rem;
       padding: 0.6rem 1.2rem;
       border: 2px solid #111;
-      background: #7a7a7a;
+      background: #a39e9e;
       font-weight: 500;
-      text-decoration: #ddd;
+      text-decoration: #fffefe;
       color: #111;
       border-radius: 6px;
     }
