--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       border: 2px solid #111;
       background: #a39e9e;
       font-weight: 500;
-      text-decoration: #fffefe;
-      color: #111;
+      text-decoration:none;
+      color: #ffffff;
       border-radius: 6px;
     }
 
@@ -120,11 +120,11 @@
 <body>
 
   <header>
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <div>SOFIA VELAGRI</div>
-    </a>    
-    <div class="menu-icon">☰</div>
-  </header>
+  <a href="https://www.fanvue.com/sofiakiko" target="_blank" class="logo-link">
+    SOFIA VELAGRI
+  </a>    
+  <div class="menu-icon">☰</div>
+</header>
 
   <!-- Hero block is clickable -->
   <section class="hero">
