--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     .menu-icon {
       font-size: 1.5rem;
+      cursor: pointer; /* добавлено */
     }
 
     .hero a {
@@ -77,7 +78,7 @@
       border: 2px solid #111;
       background: #a39e9e;
       font-weight: 500;
-      text-decoration:none;
+      text-decoration: none;
       color: #ffffff;
       border-radius: 6px;
     }
@@ -130,110 +131,47 @@
         font-size: 1.1rem;
       }
     }
+
     /* Сайдбар скрыт по умолчанию */
-#sidebar {
-  position: fixed;
-  top: 0;
-  right: -250px; /* прячем за экран */
-  width: 250px;
-  height: 100%;
-  background-color: #111;
-  color: #fff;
-  padding-top: 60px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  transition: right 0.3s ease;
-  z-index: 1001;
-}
+    #sidebar {
+      position: fixed;
+      top: 0;
+      right: -250px; /* прячем за экран */
+      width: 250px;
+      height: 100%;
+      background-color: #111;
+      color: #fff;
+      padding-top: 60px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      transition: right 0.3s ease;
+      z-index: 1001;
+    }
 
-#sidebar a {
-  padding: 12px 20px;
-  color: #fff;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
+    #sidebar a {
+      padding: 12px 20px;
+      color: #fff;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-#sidebar a:hover {
-  background-color: #333;
-}
+    #sidebar a:hover {
+      background-color: #333;
+    }
 
-/* Тёмный фон при открытии меню */
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease;
-  z-index: 1000;
-}
-
-/* Открытое меню */
-#sidebar.open {
-  right: 0;
-}
-
-#overlay.show {
-  opacity: 1;
-  visibility: visible;
-}
-
-  </style>
-</head>
-<body>
-
-  <header>
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank" class="logo-link">
-      SOFIA VELAGRI
-    </a>    
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
-  </header>
-  
-<!-- Сайдбар -->
-<div id="sidebar">
-  <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-    <img src="fanvue.png" alt="Fanvue" width="24" height="24"> Fanvue
-  </a>
-  <a href="https://instagram.com/yourmodelpage" target="_blank">
-    <img src="instagram.png" alt="Instagram" width="24" height="24"> Instagram
-  </a>
-  <a href="mailto:contact@example.com">
-    <img src="email.png" alt="Contact" width="24" height="24"> Contact
-  </a>
-</div>
-<div id="overlay" onclick="toggleMenu()"></div>
-<script>
-function toggleMenu() {
-  document.getElementById("sidebar").classList.toggle("open");
-  document.getElementById("overlay").classList.toggle("show");
-}
-</script>
-
-  <!-- Hero block is clickable -->
-  <section class="hero">
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="sofia.png" alt="Sofia Velagri">
-      <div class="tagline">Discover the New Style</div>
-      <div class="cta-button">Private Content <img src="18.png" alt="Fanvue" width="32" height="32" style="vertical-align: middle; margin-left: 8px;"></div>
-    </a>
-    <div class="warning">
-      <span>18+</span> WARNING: Explicit Content
-    </div>
-  </section>
-
-  <footer>
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-    <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue</a>
-    <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
-    <img src="inst.png" alt="Instagram" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Instagram</a>
-    <a href="mailto:forme@sofiavelagri.com"><img src="mesage.png" alt="Contact" width="28" height="28" style="vertical-align: middle; margin-right: 8px;">Contact</a>
-  </footer>
-
-</body>
-</html>
+    /* Тёмный фон при открытии меню */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease;
+      z-index: 1000;
+    }
