--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
   <!-- Сайдбар -->
   <div id="sidebar">
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="fanvue.png" alt="Fanvue" width="24" height="24"> Fanvue
+      <img src="Fan.png" alt="Fanvue" width="24" height="24"> Fanvue
     </a>
     <a href="https://instagram.com/yourmodelpage" target="_blank">
-      <img src="instagram.png" alt="Instagram" width="24" height="24"> Instagram
+      <img src="inst.png" alt="Instagram" width="24" height="24"> Instagram
     </a>
     <a href="mailto:contact@example.com">
-      <img src="email.png" alt="Contact" width="24" height="24"> Contact
+      <img src="mesage.png" alt="Contact" width="24" height="24"> Contact
     </a>
   </div>
   <div id="overlay" onclick="toggleMenu()"></div>
