--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <!-- Hero block is clickable -->
   <section class="hero">
     <a href="https://www.fanvue.com/sofiakiko" target="_blank">
-      <img src="sofia.png" alt="Sofia Velagri">
+      <img src="sofia.gpg" alt="Sofia Velagri">
       <div class="tagline">Discover the New Style</div>
       <div class="cta-button">
         Private Content
