--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SOFIA VELAGRI</title>
+  <title>Model</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
