--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
     }
     #sidebar.open{ right:0; }
     #overlay.show{ opacity:1; visibility:visible; }
+    .cta-button {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 16px;
+  background-color: #ff0044;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 8px;
+  animation: pulse 1.2s infinite;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button img {
+  margin-left: 8px;
+}
+
+.cta-button:hover {
+  background-color: #cc0036;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255,0,68, 0.7); }
+  50% { transform: scale(1.05); box-shadow: 0 0 15px 5px rgba(255,0,68, 0.6); }
+  100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255,0,68, 0.7); }
+}
   </style>
 </head>
 <body>
