--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 <body>
 
   <header>
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank" class="logo-link">SOFIA VELAGRI</a>
+    <a href="https://www.fanvue.com/sofiakiko/fv-8" target="_blank" class="logo-link">SOFIA VELAGRI</a>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
   </header>
 
   <!-- Сайдбар -->
   <div id="sidebar">
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
+    <a href="https://www.fanvue.com/sofiakiko/fv-8" target="_blank">
       <img src="Fan.png" alt="Fanvue" width="24" height="24"> Fanvue
     </a>
     <a href="https://instagram.com/yourmodelpage" target="_blank">
@@ -182,10 +182,10 @@
       <div class="carousel__dots" role="tablist" aria-label="Выбор слайда"></div>
     </div>
 
-    <a class="tagline" href="https://www.fanvue.com/sofiakiko" target="_blank" rel="noopener">
+    <a class="tagline" href="https://www.fanvue.com/sofiakiko/fv-8" target="_blank" rel="noopener">
   Discover the New Style
     </a>
-    <a class="cta-button" href="https://www.fanvue.com/sofiakiko" target="_blank">
+    <a class="cta-button" href="https://www.fanvue.com/sofiakiko/fv-8" target="_blank">
       Private Content
       <img src="18.png" alt="18+" width="32" height="32" style="vertical-align: middle; margin-left: 8px;">
     </a>
@@ -193,7 +193,7 @@
   </section>
 
   <footer>
-    <a href="https://www.fanvue.com/sofiakiko" target="_blank">
+    <a href="https://www.fanvue.com/sofiakiko/fv-8" target="_blank">
       <img src="Fan.png" alt="Fanvue" width="32" height="40" style="vertical-align: middle; margin-right: 8px;">Fanvue
     </a>
     <a href="https://www.instagram.com/sofiavelagri?igsh=OHdraG5ocWhsanEy" target="_blank">
@@ -213,11 +213,11 @@
     // ====== Карусель ======
     (function(){
       const images = [
-        { src: 'sofia.jpg',  alt: 'Sofia Velagri 1', link: 'https://www.fanvue.com/sofiakiko' },
-        { src: 'sofia2.jpg', alt: 'Sofia Velagri 2', link: 'https://www.fanvue.com/sofiakiko' },
-        { src: 'sofia3.jpg', alt: 'Sofia Velagri 3', link: 'https://www.fanvue.com/sofiakiko' },
-        { src: 'sofia4.jpg',  alt: 'Sofia Velagri 4', link: 'https://www.fanvue.com/sofiakiko' },
-        { src: 'sofia5.jpg',  alt: 'Sofia Velagri 5', link: 'https://www.fanvue.com/sofiakiko' },
+        { src: 'sofia.jpg',  alt: 'Sofia Velagri 1', link: 'https://www.fanvue.com/sofiakiko/fv-8' },
+        { src: 'sofia2.jpg', alt: 'Sofia Velagri 2', link: 'https://www.fanvue.com/sofiakiko/fv-8' },
+        { src: 'sofia3.jpg', alt: 'Sofia Velagri 3', link: 'https://www.fanvue.com/sofiakiko/fv-8' },
+        { src: 'sofia4.jpg',  alt: 'Sofia Velagri 4', link: 'https://www.fanvue.com/sofiakiko/fv-8' },
+        { src: 'sofia5.jpg',  alt: 'Sofia Velagri 5', link: 'https://www.fanvue.com/sofiakiko/fv-8' },
       ];
 
       const root   = document.getElementById('heroCarousel');
